gitops/apps/demo-nginx/overlays/dev/image-and-port-patch.yaml
apiVersion: app/v1
kind: Deployment
metadata:
  name: demo-nginx
spec:
  template:
    spec:
      containers:
      - name: nginx
        image: ghcr.io/jasonvandeventer/demo-app:latest
        ports:
        - containerPort: 8080
